# wasm_game_of_life

./: CMakeLists.txt  LICENSE  README.md  compile.sh  game_of_life.cpp  piserver.sh
docs/: index.html  index.js  index.wasm
